--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,204 @@ main {
     margin: 15px 12px;
     margin-bottom: 75px;
     min-width: 259px;
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /
   }
   
   
+
+.focus2 {
+    font-family: var(--ff-lato);
+    font-size: 200px;
+    font-weight: var(--fw-500);
+    letter-spacing: 5px;
+    color: #ffffff;
+
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100%;
+  }
+
+    .focus2 span{ 
+      text-transform: uppercase;
+      animation: animate 2s linear infinite;
+    }
+    .focus2 .space {
+      width: 40px;
+      display: inline-block;
+  }
+
+    .focus2 span:nth-child(1){
+      animation-delay: 0s;
+    }
+    .focus2 span:nth-child(2){
+      animation-delay: 0.1s;
+    }
+    .focus2 span:nth-child(3){
+      animation-delay: 0.2s;
+    }
+    .focus2 span:nth-child(4){
+      animation-delay: 0.3s;
+    }
+    .focus2 span:nth-child(5){
+      animation-delay: 0.4s;
+    }
+    .focus2 span:nth-child(6){
+      animation-delay: 0.5s;
+    }
+    .focus2 span:nth-child(7){
+      animation-delay: 0.6s;
+    }
+    .focus2 span:nth-child(8){
+      animation-delay: 0.7s;
+    }
+    .focus2 span:nth-child(9){
+      animation-delay: 0.8s;
+    }
+    .focus2 span:nth-child(10){
+      animation-delay: 0.9s;
+    }
+
+    @keyframes animate{
+      0%{
+        filter: blur(0);
+      }
+      40%{
+        filter: blur(20px);
+      }
+      80%{
+        filter: blur(0);
+      }
+      100%{
+        filter: blur(0);
+      }
+    }
+
+  @media (max-width: 600px) { /* Dispositivos moviles */
+  .focus2 {
+    font-family: Indigo Regular;
+    
+    font-size: 25px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    color: #ffffff;
+  }
+
+    .focus2 span{ 
+      text-transform: uppercase;
+      animation: animate 2s linear infinite;
+    }
+
+    .focus2 span:nth-child(1){
+      animation-delay: 0s;
+    }
+    .focus2 span:nth-child(2){
+      animation-delay: 0.1s;
+    }
+    .focus2 span:nth-child(3){
+      animation-delay: 0.2s;
+    }
+    .focus2 span:nth-child(4){
+      animation-delay: 0.3s;
+    }
+    .focus2 span:nth-child(5){
+      animation-delay: 0.4s;
+    }
+    .focus2 span:nth-child(6){
+      animation-delay: 0.5s;
+    }
+    .focus2 span:nth-child(7){
+      animation-delay: 0.6s;
+    }
+    .focus2 span:nth-child(8){
+      animation-delay: 0.7s;
+    }
+    .focus2 span:nth-child(9){
+      animation-delay: 0.8s;
+    }
+    .focus2 span:nth-child(10){
+      animation-delay: 0.9s;
+    }
+
+    @keyframes animate{
+      0%{
+        filter: blur(0);
+      }
+      40%{
+        filter: blur(10px);
+      }
+      80%{
+        filter: blur(0);
+      }
+      100%{
+        filter: blur(0);
+      }
+    }
+}
+
+@media (max-width: 366px) { /* Dispositivos moviles mas pequeños*/
+  .focus2 {
+    font-family: Indigo Regular;
+    
+    font-size: 19px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    color: #ffffff;
+  }
+
+    .focus2 span{ 
+      text-transform: uppercase;
+      animation: animate 2s linear infinite;
+    }
+
+    .focus2 span:nth-child(1){
+      animation-delay: 0s;
+    }
+    .focus2 span:nth-child(2){
+      animation-delay: 0.1s;
+    }
+    .focus2 span:nth-child(3){
+      animation-delay: 0.2s;
+    }
+    .focus2 span:nth-child(4){
+      animation-delay: 0.3s;
+    }
+    .focus2 span:nth-child(5){
+      animation-delay: 0.4s;
+    }
+    .focus2 span:nth-child(6){
+      animation-delay: 0.5s;
+    }
+    .focus2 span:nth-child(7){
+      animation-delay: 0.6s;
+    }
+    .focus2 span:nth-child(8){
+      animation-delay: 0.7s;
+    }
+    .focus2 span:nth-child(9){
+      animation-delay: 0.8s;
+    }
+    .focus2 span:nth-child(10){
+      animation-delay: 0.9s;
+    }
+
+    @keyframes animate{
+      0%{
+        filter: blur(0);
+      }
+      40%{
+        filter: blur(10px);
+      }
+      80%{
+        filter: blur(0);
+      }
+      100%{
+        filter: blur(0);
+      }
+    }
+}
