--- a/assets/css/lottie.css
+++ b/assets/css/lottie.css
@@ -8,7 +8,7 @@ body, html {
   #lottie-container-mobil {
     display: none;
   }
-  #lottie-container {
+  #lottie-container  {
     position: fixed;
     top: 0;
     left: 0;
@@ -18,11 +18,10 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 10; /* Asegura que esté por encima del contenido */
     transition: opacity 1s ease-in-out; /* Transición suave de desvanecimiento */
   }
   
-  #lottie-container.hidden {
+  #lottie-container.hidden, #lottie-container-mobil.hidden {
     opacity: 0;
     pointer-events: none; /* Evita que bloquee la interacción */
   }
@@ -90,12 +89,6 @@ body, html {
   }
   
   
-  /* Estilos para cuando se oculta el contenedor de carga */
-  #contenido {
-    opacity: 0; /* Oculto inicialmente con opacidad */
-    
-  }
-  
   /* Estilos para móviles */
   @media (max-width: 768px) {
    #lottie-container {
@@ -108,6 +101,7 @@ body, html {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    transition: opacity 1s ease-in-out; /* Transición suave de desvanecimiento */
   }
 
   /* Ajustamos el tamaño del Lottie en móviles */
