--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,12 +20,12 @@
     hsla(240, 1%, 18%, 0.251) 0%, 
     hsla(240, 2%, 11%, 0) 100%
   ), hsl(240, 2%, 13%);
-  --bg-gradient-yellow-1: linear-gradient(
+  --bg-gradient-purple-1: linear-gradient(
     to bottom right, 
     hsl(246.4,100%,70.8%),  0%, 
     hsla(36, 100%, 69%, 0) 50%
   );
-  --bg-gradient-yellow-2: linear-gradient(
+  --bg-gradient-purple-2: linear-gradient(
     135deg, 
     hsla(240, 65%, 59%, 0.583) 0%, 
     hsla(244, 95%, 71%, 0.079) 59.86%
@@ -127,7 +127,7 @@ a:hover {
   text-decoration: underline;
 }
 a:active {
-  color: var(--bg-gradient-yellow-1);
+  color: var(--bg-gradient-purple-1);
   background-color: transparent;
   text-decoration: underline;
 }
@@ -401,10 +401,10 @@ main {
 }
 
 .info_more-btn:hover,
-.info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
+.info_more-btn:focus { background: var(--bg-gradient-purple-1); }
 
 .info_more-btn:hover::before,
-.info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
+.info_more-btn:focus::before { background: var(--bg-gradient-purple-2); }
 
 .info_more-btn span { display: none; }
 
@@ -737,48 +737,12 @@ main {
 }
 
 .modal-content p {
+  margin-top: 10px;
   color: var(--light-gray);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
-
-
-/**
- * #clients 
- */
-
-.clients { margin-bottom: 15px; }
-
-.clients-list {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 15px;
-  margin: 0 -15px;
-  padding: 25px;
-  padding-bottom: 25px;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  overscroll-behavior-inline: contain;
-  scroll-snap-type: inline mandatory;
-  scroll-padding-inline: 25px;
-}
-
-.clients-item {
-  min-width: 50%;
-  scroll-snap-align: start;
-}
-
-.clients-item img {
-  width: 100%;
-  filter: grayscale(1);
-  transition: var(--transition-1);
-}
-
-.clients-item img:hover { filter: grayscale(0); }
-
-
 
 
 
@@ -1032,7 +996,7 @@ main {
 .project-item > a:hover img { transform: scale(1.1); }
 
 .project-title,
-.project-category { margin-left: 10px; }
+.project-category { margin-left: 0px; }
 
 .project-title {
   color: var(--white-2);
@@ -1043,7 +1007,8 @@ main {
 }
 
 .project-category {
-  color: var(--light-gray-70);
+
+  color: var(--bg-gradient-purple-2);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
 }
@@ -1230,9 +1195,9 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn ion-icon { font-size: 16px; }
 
-.form-btn:hover { background: var(--bg-gradient-yellow-1); }
+.form-btn:hover { background: var(--bg-gradient-purple-1); }
 
-.form-btn:hover::before { background: var(--bg-gradient-yellow-2); }
+.form-btn:hover::before { background: var(--bg-gradient-purple-2); }
 
 .form-btn:disabled {
   opacity: 0.7;
