--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,7 @@ time,
 span {
   display: block;
 }
+
 article>section>p>a{
   display: contents;
 }
@@ -860,6 +861,9 @@ main {
   font-size: var(--fs-6);
   line-height: 1.3;
   margin-bottom: 7px;
+}
+.timeline-item-title a {
+  display: contents;
 }
 
 .timeline-list span {
